[gd_scene load_steps=5 format=2]

[ext_resource path="res://Themes/Fonts/PixelX16_128.tres" type="DynamicFont" id=1]
[ext_resource path="res://Themes/Fonts/PixelX16_96.tres" type="DynamicFont" id=2]
[ext_resource path="res://Themes/DefaultTheme.tres" type="Theme" id=3]
[ext_resource path="res://Interface/EndScreen/EndScreen.gd" type="Script" id=4]

[node name="EndScreen" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 4 )
__meta__ = {
"_edit_use_anchors_": false
}
alpha = 1.0
_text_fields = [ NodePath("MarginContainer/VBoxContainer/ComeBackLater"), NodePath("MarginContainer/VBoxContainer/CompletedText") ]
_buttons = [ NodePath("MarginContainer/VBoxContainer/HBoxContainer/Replay/Button"), NodePath("MarginContainer/VBoxContainer/HBoxContainer/Continue/Button"), NodePath("MarginContainer/VBoxContainer/MarginContainer/Button") ]
_background = NodePath("Background")

[node name="Background" type="ColorRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0.235294, 0.235294, 0.235294, 0.25098 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MarginContainer" type="MarginContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
custom_constants/margin_right = 0
custom_constants/margin_top = 64
custom_constants/margin_left = 0
custom_constants/margin_bottom = 0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
margin_top = 64.0
margin_right = 1024.0
margin_bottom = 1108.0
size_flags_horizontal = 3

[node name="ComeBackLater" type="Label" parent="MarginContainer/VBoxContainer"]
visible = false
margin_right = 1024.0
margin_bottom = 606.0
size_flags_horizontal = 3
size_flags_vertical = 0
theme = ExtResource( 3 )
custom_fonts/font = ExtResource( 2 )
text = "You've finished all the levels I've made for now! 
Come back later, and I might just have more."
align = 1
autowrap = true

[node name="CompletedText" type="Label" parent="MarginContainer/VBoxContainer"]
margin_right = 1024.0
margin_bottom = 262.0
size_flags_horizontal = 3
size_flags_vertical = 0
theme = ExtResource( 3 )
custom_fonts/font = ExtResource( 1 )
custom_colors/font_color = Color( 1, 1, 1, 1 )
text = "LEVEL
COMPLETE"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer/VBoxContainer"]
margin_top = 270.0
margin_right = 1024.0
margin_bottom = 430.0
size_flags_horizontal = 3

[node name="Replay" type="MarginContainer" parent="MarginContainer/VBoxContainer/HBoxContainer"]
margin_right = 494.0
margin_bottom = 160.0
size_flags_horizontal = 3
custom_constants/margin_right = 8
custom_constants/margin_top = 32
custom_constants/margin_left = 16
custom_constants/margin_bottom = 32

[node name="Button" type="Button" parent="MarginContainer/VBoxContainer/HBoxContainer/Replay"]
margin_left = 16.0
margin_top = 32.0
margin_right = 486.0
margin_bottom = 128.0
theme = ExtResource( 3 )
custom_fonts/font = ExtResource( 2 )
custom_colors/font_color_disabled = Color( 0.972549, 0.741176, 0, 1 )
custom_colors/font_color = Color( 0.972549, 0.741176, 0, 1 )
custom_colors/font_color_hover = Color( 0.972549, 0.741176, 0, 1 )
custom_colors/font_color_pressed = Color( 0.972549, 0.741176, 0, 1 )
text = "[restart]"

[node name="Continue" type="MarginContainer" parent="MarginContainer/VBoxContainer/HBoxContainer"]
margin_left = 502.0
margin_right = 1024.0
margin_bottom = 160.0
size_flags_horizontal = 3
custom_constants/margin_right = 16
custom_constants/margin_top = 32
custom_constants/margin_left = 8
custom_constants/margin_bottom = 32

[node name="Button" type="Button" parent="MarginContainer/VBoxContainer/HBoxContainer/Continue"]
margin_left = 8.0
margin_top = 32.0
margin_right = 506.0
margin_bottom = 128.0
theme = ExtResource( 3 )
custom_fonts/font = ExtResource( 2 )
custom_colors/font_color_disabled = Color( 0.517647, 0.839216, 0.623529, 1 )
custom_colors/font_color = Color( 0.517647, 0.839216, 0.623529, 1 )
custom_colors/font_color_hover = Color( 0.517647, 0.839216, 0.623529, 1 )
custom_colors/font_color_pressed = Color( 0.517647, 0.839216, 0.623529, 1 )
text = "[continue]"

[node name="MarginContainer" type="MarginContainer" parent="MarginContainer/VBoxContainer"]
visible = false
margin_top = 782.0
margin_right = 1024.0
margin_bottom = 878.0
custom_constants/margin_right = 0
custom_constants/margin_top = 32
custom_constants/margin_left = 0
custom_constants/margin_bottom = 0

[node name="Button" type="Button" parent="MarginContainer/VBoxContainer/MarginContainer"]
margin_left = 298.0
margin_top = 32.0
margin_right = 726.0
margin_bottom = 96.0
size_flags_horizontal = 4
theme = ExtResource( 3 )
text = "[Save replay]"
[connection signal="pressed" from="MarginContainer/VBoxContainer/HBoxContainer/Replay/Button" to="." method="_restart_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/HBoxContainer/Continue/Button" to="." method="_continue_pressed"]
